--- a/src/components/styles/HomeScreenStyles.css
+++ b/src/components/styles/HomeScreenStyles.css
@@ -1,3 +1,12 @@
+p {
+    color: var(--dark_base);
+    transition: color 1.5s;
+}
+
+.dark_mode p {
+    color: var(--light_base);
+}
+
 .home{
     height: 100vh;
     width: 100vw;
@@ -19,6 +28,8 @@
     align-items: center;
     display: flex;
     animation: slideleft 2s ease-in-out forwards;
+    transition: background-color 1.5s;
+    transition-delay: 0.1s;
 }
 
 
@@ -92,6 +103,7 @@
     position: absolute;
     transform-origin: center;
     left: 18px;
+    top: -1px;
     transition: left 0.2s ease, top 0.2s ease;
     animation: none
 }
@@ -180,9 +192,10 @@
 
 
 .externalIcon{
-    color: var(--dark_base);
     font-size: 2.25em;
     margin: 1vh 1vw 0 1vw;
+    transition: color 1.5s;
+    transition-delay: 0.1s;
 }
 
 .iconContainer{
